--- a/UwingoIdentityMVC/Views/Shared/_Footer.cshtml
+++ b/UwingoIdentityMVC/Views/Shared/_Footer.cshtml
@@ -2,6 +2,6 @@
     &copy; <script>
                document.write(new Date().getFullYear())
     </script> Uwingo <span class="text-muted d-none d-sm-inline-block float-end">
-        Crafted with <i class="mdi mdi-heart text-danger"></i> by Uwingo
+        @Localizer["Crafted with"] <i class="mdi mdi-heart text-danger"></i> @Localizer["by Uwingo"]
     </span>
 </footer><!--end footer-->
