--- a/UwingoIdentityMVC/Views/Company/Index.cshtml
+++ b/UwingoIdentityMVC/Views/Company/Index.cshtml
@@ -74,7 +74,7 @@
                                                 <option value="100">100</option>
                                             }
                                         }
-                                    </select> entries
+                                    </select> @Localizer["entries"]
                                 </label>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                     <div class="row">
                         <div class="col-sm-12 col-md-5">
                             <div class="dataTables_info" id="datatable-buttons_info" role="status" aria-live="polite">
-                                Showing @ViewBag.PageNumber to @ViewBag.PageSize of @ViewBag.TotalRecords entries
+                                Showing @ViewBag.PageNumber to @ViewBag.PageSize of @ViewBag.TotalRecords @Localizer["entries"]
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-7">
